--- a/ucos_in/Makefile.old
+++ b/ucos_in/Makefile.old
@@ -35,7 +35,7 @@ error:
 	$(error Invalid configuration, please check your inputs)
 endif
 
-SOURCEFILES := ../STM32F1xxxx/CMSIS_StdPeriph/CM3/CoreSupport/core_cm3.c ../STM32F1xxxx/StartupFiles/startup_stm32f103xe.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/misc.c basic_system/cpp_interface/cpp_interface.cpp basic_system/delay/delay.c basic_system/sys/sys.c main.cpp software/cpp_buf/cpp_buf.cpp system_stm32f10x.c
+SOURCEFILES := ../STM32F1xxxx/CMSIS_StdPeriph/CM3/CoreSupport/core_cm3.c ../STM32F1xxxx/CMSIS_StdPeriph/CM3/DeviceSupport/ST/STM32F10x/system_stm32f10x.c ../STM32F1xxxx/StartupFiles/startup_stm32f103xe.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/misc.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_adc.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_bkp.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_can.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_cec.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_crc.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_dac.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_dbgmcu.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_dma.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_exti.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_flash.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_fsmc.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_gpio.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_i2c.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_iwdg.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_pwr.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_rtc.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_sdio.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_spi.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_tim.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_usart.c ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_wwdg.c ../UCOSII/CORE/os_core.c ../UCOSII/CORE/os_flag.c ../UCOSII/CORE/os_mbox.c ../UCOSII/CORE/os_mem.c ../UCOSII/CORE/os_mutex.c ../UCOSII/CORE/os_q.c ../UCOSII/CORE/os_sem.c ../UCOSII/CORE/os_task.c ../UCOSII/CORE/os_time.c ../UCOSII/CORE/os_tmr.c ../UCOSII/PORT/os_cpu_c.c ../UCOSII/PORT/os_dbg.c basic_system/cpp_interface/cpp_interface.cpp basic_system/delay/delay.c basic_system/sys/sys.c main.cpp software/cpp_buf/cpp_buf.cpp
 EXTERNAL_LIBS := 
 EXTERNAL_LIBS_COPIED := $(foreach lib, $(EXTERNAL_LIBS),$(BINARYDIR)/$(notdir $(lib)))
 
@@ -185,11 +185,151 @@ $(BINARYDIR)/core_cm3.o : ../STM32F1xxxx/CMSIS_StdPeriph/CM3/CoreSupport/core_cm
 	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
 
 
+$(BINARYDIR)/system_stm32f10x.o : ../STM32F1xxxx/CMSIS_StdPeriph/CM3/DeviceSupport/ST/STM32F10x/system_stm32f10x.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
 $(BINARYDIR)/startup_stm32f103xe.o : ../STM32F1xxxx/StartupFiles/startup_stm32f103xe.c $(all_make_files) |$(BINARYDIR)
 	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
 
 
 $(BINARYDIR)/misc.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/misc.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_adc.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_adc.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_bkp.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_bkp.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_can.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_can.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_cec.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_cec.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_crc.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_crc.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_dac.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_dac.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_dbgmcu.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_dbgmcu.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_dma.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_dma.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_exti.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_exti.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_flash.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_flash.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_fsmc.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_fsmc.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_gpio.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_gpio.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_i2c.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_i2c.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_iwdg.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_iwdg.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_pwr.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_pwr.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_rcc.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_rtc.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_rtc.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_sdio.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_sdio.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_spi.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_spi.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_tim.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_tim.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_usart.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_usart.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/stm32f10x_wwdg.o : ../STM32F1xxxx/STM32F10x_StdPeriph_Driver/src/stm32f10x_wwdg.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_core.o : ../UCOSII/CORE/os_core.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_flag.o : ../UCOSII/CORE/os_flag.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_mbox.o : ../UCOSII/CORE/os_mbox.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_mem.o : ../UCOSII/CORE/os_mem.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_mutex.o : ../UCOSII/CORE/os_mutex.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_q.o : ../UCOSII/CORE/os_q.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_sem.o : ../UCOSII/CORE/os_sem.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_task.o : ../UCOSII/CORE/os_task.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_time.o : ../UCOSII/CORE/os_time.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_tmr.o : ../UCOSII/CORE/os_tmr.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_cpu_c.o : ../UCOSII/PORT/os_cpu_c.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/os_dbg.o : ../UCOSII/PORT/os_dbg.c $(all_make_files) |$(BINARYDIR)
 	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
 
 
