--- a/ucos_in/ucos_in.vcxproj
+++ b/ucos_in/ucos_in.vcxproj
@@ -35,13 +35,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <NMakeIncludeSearchPath>.;g:\arm-eabi-4.4.0\arm-eabi\include\c++\5.3.0;g:\arm-eabi-4.4.0\arm-eabi\include\c++\5.3.0\arm-eabi\thumb\cortex_m3;g:\arm-eabi-4.4.0\arm-eabi\include\c++\5.3.0\backward;g:\arm-eabi-4.4.0\lib\gcc\arm-eabi\5.3.0\include;g:\arm-eabi-4.4.0\lib\gcc\arm-eabi\5.3.0\include-fixed;g:\arm-eabi-4.4.0\arm-eabi\sys-include;g:\arm-eabi-4.4.0\arm-eabi\include;basic_system/delay;basic_system/sys;basic_system/usart;..\UCOSII\CONFIG;..\UCOSII\CORE;..\UCOSII\PORT;basic_system\sys;$(NMakeIncludeSearchPath)</NMakeIncludeSearchPath>
+    <NMakeIncludeSearchPath>.;C:\Users\Administrator\Desktop\ucos_in\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc;C:\Users\Administrator\Desktop\ucos_in\STM32F1xxxx\StartupFiles;C:\Users\Administrator\Desktop\ucos_in\STM32F1xxxx\CMSIS_StdPeriph\CM3\DeviceSupport\ST\STM32F10x;C:\Users\Administrator\Desktop\ucos_in\STM32F1xxxx\CMSIS_StdPeriph\CM3\CoreSupport;g:\arm-eabi-4.4.0\arm-eabi\include\c++\5.3.0;g:\arm-eabi-4.4.0\arm-eabi\include\c++\5.3.0\arm-eabi\thumb\cortex_m3;g:\arm-eabi-4.4.0\arm-eabi\include\c++\5.3.0\backward;g:\arm-eabi-4.4.0\lib\gcc\arm-eabi\5.3.0\include;g:\arm-eabi-4.4.0\lib\gcc\arm-eabi\5.3.0\include-fixed;g:\arm-eabi-4.4.0\arm-eabi\sys-include;g:\arm-eabi-4.4.0\arm-eabi\include;basic_system/delay;basic_system/sys;basic_system/usart;../UCOSII/CONFIG;../UCOSII/CORE;../UCOSII/PORT;..\UCOSII\CONFIG;..\UCOSII\CORE;..\UCOSII\PORT;$(NMakeIncludeSearchPath)</NMakeIncludeSearchPath>
     <NMakeForcedIncludes>$(ProjectDir)\gcc_Debug.h;$(VISUALGDB_DIR)\gcc_compat.h;$(LOCALAPPDATA)\VisualGDB\EmbeddedBSPs\arm-eabi\com.sysprogs.arm.stm32\stm32_compat.h;$(NMakeForcedIncludes)</NMakeForcedIncludes>
     <NMakeBuildCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /build "$(ProjectPath)" "/solution:$(SolutionPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeBuildCommandLine>
     <NMakeCleanCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /clean "$(ProjectPath)" "/solution:$(SolutionPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeCleanCommandLine>
     <NMakeReBuildCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /rebuild "$(ProjectPath)" "/solution:$(SolutionPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeReBuildCommandLine>
     <NMakeOutput>$(ProjectDir)ucos_in-Debug.vgdbsettings</NMakeOutput>
-    <IncludePath>C:\Users\Administrator\Desktop\ucos_in\STM32F1xxxx\CMSIS_StdPeriph\CM3\DeviceSupport\ST\STM32F10x;C:\Users\Administrator\Desktop\ucos_in\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\Administrator\Desktop\ucos_in\UCOSII\PORT;C:\Users\Administrator\Desktop\ucos_in\STM32F1xxxx\CMSIS_StdPeriph\CM3\DeviceSupport\ST\STM32F10x;C:\Users\Administrator\Desktop\ucos_in\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc;$(IncludePath)</IncludePath>
     <ReferencePath />
     <LibraryPath />
     <SourcePath>$(SourcePath)</SourcePath>
@@ -63,6 +63,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\STM32F1xxxx\CMSIS_StdPeriph\CM3\CoreSupport\core_cm3.c" />
+    <ClCompile Include="..\STM32F1xxxx\CMSIS_StdPeriph\CM3\DeviceSupport\ST\STM32F10x\system_stm32f10x.c" />
     <ClCompile Include="..\STM32F1xxxx\StartupFiles\startup_stm32f103xe.c" />
     <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\misc.c" />
     <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_adc.c" />
@@ -92,7 +93,6 @@
     <ClCompile Include="basic_system\sys\sys.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="software\cpp_buf\cpp_buf.cpp" />
-    <ClCompile Include="system_stm32f10x.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\STM32F1xxxx\LinkerScripts\STM32F103ZE_flash.lds" />
@@ -106,14 +106,12 @@
     <None Include="ucos_in-Release.vgdbsettings" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\STM32F1xxxx\CMSIS_StdPeriph\CM3\CoreSupport\core_cm3.h" />
-    <ClInclude Include="..\STM32F1xxxx\CMSIS_StdPeriph\CM3\DeviceSupport\ST\STM32F10x\stm32f10x.h" />
-    <ClInclude Include="..\STM32F1xxxx\CMSIS_StdPeriph\CM3\DeviceSupport\ST\STM32F10x\system_stm32f10x.h" />
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\misc.h" />
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_adc.h" />
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_bkp.h" />
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_can.h" />
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_cec.h" />
+    <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_conf.h" />
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_crc.h" />
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_dac.h" />
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_dbgmcu.h" />
