--- a/ucos_in/ucos_in.vcxproj.filters
+++ b/ucos_in/ucos_in.vcxproj.filters
@@ -57,12 +57,6 @@
     <Filter Include="Header files\software\cpp_buf">
       <UniqueIdentifier>{9043e4da-9d10-4775-a571-7c628d4d1a68}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source files\Device-specific files\StdPeriph">
-      <UniqueIdentifier>{8a3b9d8b-9826-47a6-b44d-0eb1df0dd471}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header files\Device-specific files\StdPeriph">
-      <UniqueIdentifier>{59312f01-42bb-4a23-937f-26e6fc9f1761}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source files\basic_system\sys">
       <UniqueIdentifier>{1dc44894-ffd8-4b07-9128-b6d1f7dd9739}</UniqueIdentifier>
     </Filter>
@@ -71,9 +65,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="system_stm32f10x.c">
-      <Filter>Source files</Filter>
-    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>Source files</Filter>
     </ClCompile>
@@ -89,80 +80,83 @@
     <ClCompile Include="basic_system\sys\sys.c">
       <Filter>Source files\basic_system\sys</Filter>
     </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\CMSIS_StdPeriph\CM3\CoreSupport\core_cm3.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
     <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\misc.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_adc.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_bkp.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_can.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_cec.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_crc.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_dac.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_dbgmcu.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_dma.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_exti.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_flash.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_fsmc.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_gpio.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_i2c.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_iwdg.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_pwr.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_rcc.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_rtc.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_sdio.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_spi.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_tim.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_usart.c">
+      <Filter>Source files\Device-specific files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_wwdg.c">
+      <Filter>Source files\Device-specific files</Filter>
     </ClCompile>
     <ClCompile Include="..\STM32F1xxxx\StartupFiles\startup_stm32f103xe.c">
       <Filter>Source files\Device-specific files</Filter>
     </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_adc.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
+    <ClCompile Include="..\STM32F1xxxx\CMSIS_StdPeriph\CM3\CoreSupport\core_cm3.c">
+      <Filter>Source files\Device-specific files</Filter>
     </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_bkp.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_can.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_cec.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_crc.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_dac.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_dbgmcu.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_dma.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_exti.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_flash.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_fsmc.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_gpio.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_i2c.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_iwdg.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_pwr.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_rcc.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_rtc.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_sdio.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_spi.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_tim.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_usart.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
-    </ClCompile>
-    <ClCompile Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\stm32f10x_wwdg.c">
-      <Filter>Source files\Device-specific files\StdPeriph</Filter>
+    <ClCompile Include="..\STM32F1xxxx\CMSIS_StdPeriph\CM3\DeviceSupport\ST\STM32F10x\system_stm32f10x.c">
+      <Filter>Source files\Device-specific files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -182,14 +176,14 @@
     <None Include="STM32F100ZE_flash.lds">
       <Filter>Make files</Filter>
     </None>
-    <None Include="stm32.mak">
-      <Filter>Source files\Device-specific files</Filter>
-    </None>
     <None Include="STM32F103ZE_flash.lds">
       <Filter>Make files</Filter>
     </None>
     <None Include="..\STM32F1xxxx\LinkerScripts\STM32F103ZE_flash.lds">
       <Filter>Make files</Filter>
+    </None>
+    <None Include="stm32.mak">
+      <Filter>Source files\Device-specific files</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -205,83 +199,77 @@
     <ClInclude Include="basic_system\sys\sys.h">
       <Filter>Header files\basic_system\sys</Filter>
     </ClInclude>
-    <ClInclude Include="..\STM32F1xxxx\CMSIS_StdPeriph\CM3\CoreSupport\core_cm3.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\STM32F1xxxx\CMSIS_StdPeriph\CM3\DeviceSupport\ST\STM32F10x\system_stm32f10x.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
-    </ClInclude>
-    <ClInclude Include="..\STM32F1xxxx\CMSIS_StdPeriph\CM3\DeviceSupport\ST\STM32F10x\stm32f10x.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
-    </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\misc.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_adc.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_bkp.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_can.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_cec.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_conf.h">
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_crc.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_dac.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_dbgmcu.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_dma.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_exti.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_flash.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_fsmc.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_gpio.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_i2c.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_iwdg.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_pwr.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_rcc.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_rtc.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_sdio.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_spi.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_tim.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_usart.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
     <ClInclude Include="..\STM32F1xxxx\STM32F10x_StdPeriph_Driver\inc\stm32f10x_wwdg.h">
-      <Filter>Header files\Device-specific files\StdPeriph</Filter>
+      <Filter>Header files\Device-specific files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
